fix invisible selected room tab names in snobbish goldfish

--- a/themes/snobbish-goldfish/variables.scss
+++ b/themes/snobbish-goldfish/variables.scss
@@ -180,7 +180,7 @@ $pad-room-desc-bg: #333;
 $pad-room-last-message-bg: #eee;
 $pad-room-last-message-border-top: #aaa;
 $room-tab-bg-color: #222;
-$selected-room-tab-color: #222;
+$selected-room-tab-color: #fb0;
 $hovered-room-tab-color: #eee;
 $unselected-room-tab-color: #ccc;
 $opacity-behind-open-top: 1;
